# drone-loss-parser

./: Makefile  README.md  TODO.md  parse_drone_losses.py  parse_drone_losses.spec  pyproject.toml
.github/workflows/: build-win.yml
test_data/: input_1.docx  Донесення_2АДн_Autel_4_T_Сафарі_3657.docx  Донесення_2АДн_Mavic_4Pro_Сафарі_487E.docx  ЗВІТ_втрачені_БпЛА_по_21_03_2026.xlsx  Позатермінове_бойове_донесення_n03_468_від_21_03_26_1748FEV3HMM826031807.docx
