[project]
name = "drone-loss-parser"
version = "0.1.0"
description = "Parses Ukrainian combat drone loss reports (.docx) into .xlsx"
authors = [
    {name = "Dmitry Usik",email = "45354628+dmitryusikriseapps@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = [
    "python-docx (>=1.2.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[project.scripts]
parse-drone-losses = "parse_drone_losses:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.0) ; python_version < \"3.15\""
]

